Feat: SB JPA 기본 적용, H2 디비 적용, 연결에 필요한 설정

--- a/springboot/demoex/src/main/resources/application.properties
+++ b/springboot/demoex/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=demoex
+
+# 1. H2 database 설정
+# 브라우저에서 접속하여 sql 실행
+spring.h2.console.enabled=true
+# 브라우저 접속 주소
+spring.h2.console.path=/h2-console
+
+# 2. database connect 파트
+# app_db 는 커스텀이름
+# C:\Users\사용자명\app_db.mv.db 자동생성(생성 않되면 수동처리)
+spring.datasource.url=jdbc:h2:~/app_db
+# 접속시 드라이버 설정
+# spring.datasource.driverClassName=
+spring.datasource.driver-class-name=org.h2.Driver
+# 접속계정
+spring.datasource.username=sa
+spring.datasource.password=
+
+# 3. JPA 설정
+# 데이터베이스 엔진 종류 설정
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# JPA -> 사용이득 -> 테이블로 알아서 생성해준다!!
+# 엔티티 클레스 작성 -> 매칭되는 테이블이 자동 생성됨 !!
+# 단 데이터베이스는 직접 생성!!
+spring.jpa.hibernate.ddl-auto=update
+
