Feat: SB H2 데이터베이스 접속

--- a/springboot/demoex/src/main/resources/application.properties
+++ b/springboot/demoex/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.h2.console.path=/h2-console
 # 2. database connect 파트
 # app_db 는 커스텀이름
 # C:\Users\사용자명\app_db.mv.db 자동생성(생성 않되면 수동처리)
-spring.datasource.url=jdbc:h2:~/app_db
+spring.datasource.url=jdbc:h2:~/app2_db
 # 접속시 드라이버 설정
 # spring.datasource.driverClassName=
 spring.datasource.driver-class-name=org.h2.Driver
