Feat: SB JPA 리뷰 밑 코멘트 수정

--- a/springboot/demoex/src/main/resources/application.properties
+++ b/springboot/demoex/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demoex
 
+# 데이터베이스 제품 변경 => 1, 2번 항목 수정됨
 # 1. H2 database 설정
 # 브라우저에서 접속하여 sql 실행
 spring.h2.console.enabled=true
