--- a/springboot/demoex/build.gradle
+++ b/springboot/demoex/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
     // build.gradle 변화 -> 설치 (우측 바에 코끼리 아이콘 클릭 -> Gradle 밑에 바에 새로고침 버튼 클릭 -> 개발
 
+    // 템플릿 나누기, html을 쪼개서 공통부분 분할, 조립하여 화면을 구성(지원)하는 라이브러리
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+    // 입력창 유효성 검사 및 폼 데이터 관리 모듈, 유효성 검사, 폼검사 지원
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
